# djangov1

./: .gitignore  Jobcan_projectcode_list.csv  README.md  app.json  pyproject.toml  pyproject_v2.toml
app/: views.py
djangopy/: settings.py
